--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>{{peripherals.name || 'Device'}}</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button text="" icon="add"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
